apollo-federation/src/sources/connect/validation/snapshots/validation_tests@all_fields_selected.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/all_fields_selected.graphql
---
[
    Message {
        code: ConnectorsUnresolvedField,
        message: "No connector resolves field `T.unselected`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            34:3..34:22,
        ],
    },
    Message {
        code: ConnectorsUnresolvedField,
        message: "No connector resolves field `T.secondUnused`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            48:3..48:23,
        ],
    },
    Message {
        code: ConnectorsUnresolvedField,
        message: "No connector resolves field `C.unselected`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            54:3..54:21,
        ],
    },
    Message {
        code: ConnectorsUnresolvedField,
        message: "No connector resolves field `D.unselected`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            59:3..59:21,
        ],
    },
    Message {
        code: ConnectorsUnresolvedField,
        message: "No connector resolves field `Unused.unselected`. It must have a `@connect` directive or appear in `@connect(selection:)`.",
        locations: [
            63:3..63:18,
        ],
    },
]
