apollo-federation/src/sources/connect/validation/snapshots/validation_tests@circular_reference_2.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/circular_reference_2.graphql
---
[
    Message {
        code: CircularReference,
        message: "Circular reference detected in `@connect(selection:)` on `Track.modules`: type `Track` appears more than once in `Track.modules.track`. For more information, see https://go.apollo.dev/connectors/limitations#circular-references",
        locations: [
            LineColumn {
                line: 18,
                column: 18,
            }..LineColumn {
                line: 18,
                column: 51,
            },
            LineColumn {
                line: 25,
                column: 3,
            }..LineColumn {
                line: 25,
                column: 15,
            },
        ],
    },
]
