apollo-federation/src/sources/connect/validation/snapshots/validation_tests@circular_reference_3.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/circular_reference_3.graphql
---
[
    Message {
        code: CircularReference,
        message: "Direct circular reference detected in `User.friends: [User!]!`. For more information, see https://go.apollo.dev/connectors/limitations#circular-references",
        locations: [
            11:3..15:6,
        ],
    },
]
