apollo-federation/src/sources/connect/validation/snapshots/validation_tests@connect_source_undefined.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/validation/connect_source_undefined.graphql
---
[Message { code: NoSourcesDefined, message: "`@connect(source: \"v1\")` on `Query.resources` specifies a source, but none are defined. Try adding `@source(name: \"v1\")` to the schema.", locations: [LineColumn { line: 9, column: 14 }..LineColumn { line: 9, column: 26 }] }]
