apollo-federation/src/sources/connect/validation/snapshots/validation_tests@connect_spec_version_error.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/connect_spec_version_error.graphql
---
[
    Message {
        code: UnknownConnectorsVersion,
        message: "Unknown connect version: 0.3; should be one of 0.1, 0.2.",
        locations: [
            2:3..5:4,
        ],
    },
]
