apollo-federation/src/sources/connect/validation/snapshots/validation_tests@denest_scalars.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/denest_scalars.graphql
---
[
    Message {
        code: GroupSelectionRequiredForObject,
        message: "`User.street` is an object, so `@connect(selection:)` on `Query.me` must select a group `street{}`.",
        locations: [
            15:9..15:15,
            25:3..25:17,
        ],
    },
]
