apollo-federation/src/sources/connect/validation/snapshots/validation_tests@denest_scalars2.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/denest_scalars2.graphql
---
[
    Message {
        code: GroupSelectionIsNotObject,
        message: "`@connect(selection:)` on `Query.me` selects a group `street{}`, but `User.street` is of type `String` which is not an object.",
        locations: [
            15:9..15:31,
            25:3..25:17,
        ],
    },
]
